# C_DFT

./: CMakeLists.txt  README.md  direct_fourier_transform.c  direct_fourier_transform.h  example_visibilities.txt  main.cpp  unit_testing.cpp
